krackattacks: add a 2-clause BSD license for our changes

--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+krackattacks
+------------
+
+Copyright of portions of this project are held by Jouni Malinen and
+contributors (see below). Copyright of project krackattacks are held by
+Mathy Vanhoef <Mathy.Vanhoef@cs.kuleuven> and contributors.
+
+Software of project krackattacks is licensed under the 2-clause BSD
+license (the license below with the 3rd clause removed).
+
+
 wpa_supplicant and hostapd
 --------------------------
 
